test/tests/stages/8_loops/valid/extra_credit/switch_nested_not_taken.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[47]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  switch
  (
  identifier(a)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  default
  :
  identifier(a)
  =
  const int(2)
  ;
  }
  return
  identifier(a)
  ;
  }
