test/tests/stages/8_loops/invalid_semantics/extra_credit/undeclared_var_switch_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  return
  const int(0)
  ;
  case
  const int(2)
  :
  return
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
